mappers refactor