@@ -14,20 +14,37 @@ import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
-
+/**
+ * Mapper for converting Thread entities into FeedThreadDto.
+ * Specifically tailored for feed display requirements.
+ * <p>
+ * Mapper para convertir entidades Hilo en FeedThreadDto.
+ * Específicamente adaptado para los requisitos de visualización del feed.
+ */
 @Component
 public class FeedMapper {
 
     @Value("${app.default-avatar-url}") // Inyecta el valor desde application.properties
     private String defaultAvatarUrl;
 
+    /**
+     * Converts a Thread entity to a DTO suitable for feeds.
+     * Note: Interaction flags (isLiked, isSaved) are set to false by default and enriched later.
+     * <p>
+     * Convierte una entidad Hilo a un DTO adecuado para feeds.
+     * Nota: Las banderas de interacción (isLiked, isSaved) se establecen en falso por defecto y se enriquecen más tarde.
+     *
+     * @param thread The thread entity. / La entidad hilo.
+     * @return The DTO. / El DTO.
+     */
     public FeedThreadDto toFeedThreadDto(ThreadClass thread) {
         UserDto authorDto = new UserDto(
                 thread.getUser().getId(),
                 thread.getUser().getUsername(),
                 thread.getUser().getDisplayName(),
                 thread.getUser().getAvatarUrl(defaultAvatarUrl),
-                thread.getUser().getCalculatedThreadCount(), false,
+                thread.getUser().getCalculatedThreadCount(),
+                false,
                 thread.getUser().getFollowingCount(),
                 thread.getUser().getFollowersCount(),
                 false,
@@ -40,7 +57,7 @@ public class FeedMapper {
         List<String> postContents = thread.getPosts().stream()
                 .sorted(Comparator.comparing(Post::getPosition))
                 .map(Post::getContent)
-                .collect(Collectors.toList());
+                .toList();
 
         StatsDto statsDto = new StatsDto(
                 thread.getLikeCount(),
@@ -64,9 +81,9 @@ public class FeedMapper {
                 thread.getCreatedAt(),
                 postContents,
                 statsDto,
-                false, // isLiked (se llenará en el Enricher)
-                false, // isSaved (se llenará en el Enricher)
-                categoryName, // <-- EL ARGUMENTO QUE FALTABA
+                false,
+                false,
+                categoryName,
                 imageUrls
         );
     }
